--- a/app/login.ejs
+++ b/app/login.ejs
@@ -8,15 +8,15 @@
     <div id="loginContent">
         <form id="loginForm">
             <img id="loginImageSeal" src="assets/images/SealCircle.png"/>
-            <span id="loginSubheader">MINECRAFT LOGIN</span>
+            <span id="loginSubheader">Connexion via Mojang</span>
             <div class="loginFieldContainer">
                 <svg id="profileSVG" class="loginSVG" viewBox="40 37 65.36 61.43">
                     <g>
                         <path d="M86.77,58.12A13.79,13.79,0,1,0,73,71.91,13.79,13.79,0,0,0,86.77,58.12M97,103.67a3.41,3.41,0,0,0,3.39-3.84,27.57,27.57,0,0,0-54.61,0,3.41,3.41,0,0,0,3.39,3.84Z"/>
                     </g>
                 </svg>
-                <span class="loginErrorSpan" id="loginEmailError">* Invalid Value</span>
-                <input id="loginUsername" class="loginField" type="text" placeholder="EMAIL OR USERNAME"/>
+                <span class="loginErrorSpan" id="loginEmailError">* Veuillez rentrer vote email Mojang</span>
+                <input id="loginUsername" class="loginField" type="text" placeholder="EMAIL MOJANG"/>
             </div>
             <div class="loginFieldContainer">
                 <svg id="lockSVG" class="loginSVG" viewBox="40 32 60.36 70.43">
